crates/config/tests/snapshots/key_word_unicode.snap
---
source: crates/config/tests/snapshots.rs
---
# key-word-unicode

## Input

```mical
名前 hello
clé value

```

## JSON

```json
{
  "名前": "hello",
  "clé": "value"
}
```

vim:ft=markdown
