crates/config/tests/snapshots/line_string_close_brace.snap
---
source: crates/config/tests/snapshots.rs
---
# line-string-close-brace

## Input

```mical
a }not-close
b } with space

```

## JSON

```json
{
  "a": "}not-close",
  "b": "} with space"
}
```

vim:ft=markdown
