crates/config/tests/snapshots/mixed.snap
---
source: crates/config/tests/snapshots.rs
---
# mixed

## Input

```mical
#version 1
name hello world # not comment
count 42
flag true
negative -10
section {
  desc |
    block line
  inner {
    key value
  }
}
# a comment
after_block done

```

## JSON

```json
{
  "name": "hello world # not comment",
  "count": 42,
  "flag": true,
  "negative": -10,
  "sectiondesc": "block line\n",
  "sectioninnerkey": "value",
  "after_block": "done"
}
```

vim:ft=markdown
