crates/config/tests/snapshots/nested_prefix_block.snap
---
source: crates/config/tests/snapshots.rs
---
# nested_prefix_block

## Input

```mical
a. {
  b. {
    c value
  }
}

```

## Json

```json
{
  "a.b.c": "value"
}
```

vim:ft=markdown
