crates/config/tests/snapshots/nested_prefix_empty_inner.snap
---
source: crates/config/tests/snapshots.rs
---
# nested-prefix-empty-inner

## Input

```mical
a {
  b {
  }
  c 1
}

```

## JSON

```json
{
  "ac": 1
}
```

vim:ft=markdown
