crates/config/tests/snapshots/nested_prefix_entries_each_level.snap
---
source: crates/config/tests/snapshots.rs
---
# nested-prefix-entries-each-level

## Input

```mical
 a {
 1 1
 b {
   2 2
   c {
  3 3
  }
 }
 }

```

## JSON

```json
{
  "a1": 1,
  "ab2": 2,
  "abc3": 3
}
```

vim:ft=markdown
