crates/config/tests/snapshots/nested_prefix_entry_before_inner.snap
---
source: crates/config/tests/snapshots.rs
---
# nested-prefix-entry-before-inner

## Input

```mical
a {
  d 1
  b {
    c 2
  }
}

```

## JSON

```json
{
  "ad": 1,
  "abc": 2
}
```

vim:ft=markdown
